--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon --exec node app.js",
     "dev": "nodemon --exec node app.js"
   },
-  "author": "Feito pelos desenvolvedores @ São Paulo Tech School / Bandtec Digital School",
+  "author": "Feito por Gislaine",
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
